Fix broken css

--- a/src/static/css/maps.css
+++ b/src/static/css/maps.css
@@ -1222,12 +1222,13 @@ ul.types > li{
 	background-color: transparent;
 	color: #fff;
 }
-.collection-list-wrapper .nav-stacked>li>a.edit{
+.collection-list-wrapper a.edit{
 	background: url(../img/icon-delete-collection.png) 0 6px no-repeat;
 	padding-left: 30px;
 }
-.collection-list-wrapper .nav-stacked>li>a.edit:hover{
+.collection-list-wrapper a.edit:hover{
 	color: #ff0000;
+	text-decoration: none;
 }
 .collection-list-wrapper .nav .divider{
 	height: 1px;
